# Audio-Pico

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build_pico.bat
examples/: debug_test.cpp  interactive_midi_synth.cpp  mute_test.cpp  simple_api_demo.cpp  simple_wav_example.cpp  wav_player_demo.cpp
include/: AudioAPI.h  AudioAPI.hpp  AudioCore.h  MusicSequencer.h  MusicSequencer.hpp  Notes.hpp  PicoAudioCore.h  PicoAudioCore.hpp  WAVPlayer.h  WaveGenerator.h  WaveGenerator.inl  pin_config.hpp
include/tft-lcd/: ili9488_hal.hpp
samples/do_re_mi_demo/: main.cpp
samples/sine_wave_i2s_32b/: sine_wave.cpp
src/: AudioAPI.cpp  MusicSequencer.cpp  PicoAudioCore.cpp  WAVPlayer.cpp  main.cpp
src/pico_audio_32b/include/pico/util/: buffer.h
src/tft-lcd/hal/: ili9488_hal.cpp
